# GameIO2

./: .env.example  .gitignore  README.md  package-lock.json  package.json
Api_Calls/: Game Details.bru  bruno.json
src-tauri/: .gitignore  Cargo.toml  page_downloader.py  tauri.conf.json
src-tauri/src/: api.rs  database.rs  env.rs  fitgirl.py  main.rs  page_downloader.py  scrapers.rs  tmp.html  torrent.rs  utils.rs
src/routes/: +page.svelte  Download.svelte  Home.svelte  Menu.svelte  tmp.JSON
src/routes/About/: +page.svelte
src/routes/Game/: +page.svelte
src/routes/Home/: +page.svelte
src/routes/Settings/: +page.svelte
