
[package]
name = "gameio2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [ "shell-open"] }
serde = { version = "1.0.209", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
rusqlite = "0.32.1"
librqbit = "7.0.1"
select = "0.6.0"
scraper = "0.20.0"
lazy_static = "1.5.0"
anyhow = "1.0.86"
tracing = "0.1.40"
once_cell = "1.19.0"
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.5"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
